--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,6 @@
-fastapi
-uvicorn
-python-dotenv
-openai
-pydantic
-requests
+fastapi==0.121.3
+uvicorn==0.38.0
+python-dotenv==1.0.1
+openai==1.43.0
+pymongo==4.6.3
+requests==2.32.2
